--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.0"
+    ext {
+        core_ktx_version = "1.3.1"
+        appcompat_version = "1.2.0"
+        material_version = "1.2.1"
+        constraintlayout_version = "2.0.1"
+        navigation_version = "2.3.0"
+        kotlin_version = "1.4.0"
+        junit_version = "4.13"
+        junit_ext_version = "1.1.2"
+        espresso_version = "3.3.0"
+    }
     repositories {
         google()
         jcenter()
