--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,10 @@ buildscript {
         material_version = "1.2.1"
         constraintlayout_version = "2.0.1"
         navigation_version = "2.3.0"
-        kotlin_version = "1.4.0"
+        retrofit_version = "2.9.0"
+        mockwebserver_version = "4.9.0"
+        kotlin_version = "1.4.10"
+        kluent_version = "1.61"
         junit_version = "4.13"
         junit_ext_version = "1.1.2"
         espresso_version = "3.3.0"
