--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
+        gradle_version = "4.0.1"
+        kotlin_version = "1.4.10"
         core_ktx_version = "1.3.1"
         appcompat_version = "1.2.0"
         material_version = "1.2.1"
         constraintlayout_version = "2.0.1"
         navigation_version = "2.3.0"
         retrofit_version = "2.9.0"
+        room_version = "2.2.5"
         mockwebserver_version = "4.9.0"
-        kotlin_version = "1.4.10"
         kluent_version = "1.61"
         junit_version = "4.13"
         junit_ext_version = "1.1.2"
@@ -19,7 +21,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.1"
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
