--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,17 +46,16 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     // Room
     implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
-    // optional - Test helpers
+    kapt "androidx.room:room-compiler:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
+    testImplementation "junit:junit:$junit_version"
     // MockWebServer
     testImplementation "com.squareup.okhttp3:mockwebserver:$mockwebserver_version"
     // Kluent
     testImplementation "org.amshove.kluent:kluent-android:$kluent_version"
-    testImplementation "junit:junit:$junit_version"
+    // Mockk
+    testImplementation "io.mockk:mockk:$mockk_version"
     androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
-
 }
