--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         room_version = "2.2.5"
         mockwebserver_version = "4.9.0"
         kluent_version = "1.61"
+        mockk_version = "1.10.0"
         junit_version = "4.13"
         junit_ext_version = "1.1.2"
         espresso_version = "3.3.0"
