--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,11 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
+    // KTX LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_ktx_version"
     testImplementation "junit:junit:$junit_version"
+    testImplementation "android.arch.core:core-testing:$core_testing_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_test_version"
     // MockWebServer
     testImplementation "com.squareup.okhttp3:mockwebserver:$mockwebserver_version"
     // Kluent
