--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,15 @@ buildscript {
         navigation_version = "2.3.0"
         retrofit_version = "2.9.0"
         room_version = "2.2.5"
+        livedata_ktx_version = "2.2.0"
         mockwebserver_version = "4.9.0"
         kluent_version = "1.61"
         mockk_version = "1.10.0"
         junit_version = "4.13"
         junit_ext_version = "1.1.2"
         espresso_version = "3.3.0"
+        core_testing_version = "1.1.1"
+        coroutines_test_version = "1.3.9"
     }
     repositories {
         google()
