--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
         constraintlayout_version = "2.0.1"
         navigation_version = "2.3.0"
         retrofit_version = "2.9.0"
+        hilt_version = "2.28.3-alpha"
+        hilt_viewmodel_version = "1.0.0-alpha02"
         room_version = "2.2.5"
         livedata_ktx_version = "2.2.0"
         mockwebserver_version = "4.9.0"
@@ -27,6 +29,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
