--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
+    // Picasso
+    implementation "com.squareup.picasso:picasso:$picasso_version"
     // KTX LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$livedata_ktx_version"
     testImplementation "junit:junit:$junit_version"
