Added swipe to refresh feature on PhotoListFragment Added UI Improvements

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         material_version = "1.2.1"
         constraintlayout_version = "2.0.1"
         navigation_version = "2.3.0"
+        swiperefreshlayout_version = "1.1.0"
         retrofit_version = "2.9.0"
         hilt_version = "2.28.3-alpha"
         hilt_viewmodel_version = "1.0.0-alpha02"
